base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: governify-next
spec:
  tls:
    - hosts:
        - k8s.next.governify.io
        - authenticator.k8s.next.governify.io
        - scope-manager.k8s.next.governify.io
        - registry.k8s.next.governify.io
        - computer.k8s.next.governify.io
        - fetcher.k8s.next.governify.io
        - reporter.k8s.next.governify.io
        - director.k8s.next.governify.io
        - join-backend.k8s.next.governify.io
        - join.k8s.next.governify.io
        - grafana.k8s.next.governify.io
        - headlamp.k8s.next.governify.io
  rules:
    - host: k8s.next.governify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: governify-frontend
                port:
                  number: 3000
    - host: authenticator.k8s.next.governify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: governify-authenticator
                port:
                  number: 5800
    - host: scope-manager.k8s.next.governify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: governify-scope-manager
                port:
                  number: 5801
    - host: registry.k8s.next.governify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: governify-registry
                port:
                  number: 5802
    - host: computer.k8s.next.governify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: governify-computer
                port:
                  number: 5803
    - host: fetcher.k8s.next.governify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: governify-fetcher
                port:
                  number: 5804
    - host: reporter.k8s.next.governify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: governify-reporter
                port:
                  number: 5805
    - host: director.k8s.next.governify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: governify-director
                port:
                  number: 5806
    - host: join-backend.k8s.next.governify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: governify-join-backend
                port:
                  number: 5807
    - host: join.k8s.next.governify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: governify-join-frontend
                port:
                  number: 3000
    - host: grafana.k8s.next.governify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: governify-grafana
                port:
                  number: 3000
    - host: headlamp.k8s.next.governify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: governify-headlamp
                port:
                  number: 80
